# fleetmind

./: .dockerignore  Dockerfile  HACKATHON_REQUIREMENTS.md  PROJECT_SPEC.md  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
docs/: agent_eval_prompt.md  iteration_plan.md
scripts/: example_http_client.py
server/: app.py
src/delivery_dispatch/: __init__.py  api.py  environment.py  grading.py  llm.py  models.py  policies.py  scenarios.py
src/delivery_dispatch_v3/: api.py  dynamics.py  environment.py  generator.py  grading.py  models.py  policies.py  seed_catalog.py  solver.py  task_adapter.py
src/server/: app.py
